--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div class="experience">
     <h2>Experience</h2>
-    <h4 class="date">April 2021 - PRESENT</h4>
+    <h5 class="date">April 2021 - PRESENT</h5>
     <h4> BARTER BY FLUTTERWAVE, Lagos - <em>Student Ambassador</em> </h4>
     <div class="experience-list">
         <ul >
@@ -48,24 +48,29 @@
 
 <div class="education">
     <h2>Education</h2>
-<div class="uni">
-    <h4>September 2017 - PRESENT <br> Bells University of Technology, Ogun State, Nigeria - <em>Bachelors Degree</em> </h4>
+<div class="sch">
+    <h5 class="date">September 2017 - PRESENT </h5>
+    <h4> Bells University of Technology, Ogun State, Nigeria - <em>Bachelors Degree</em> </h4>
     <p>I am currently undergoing a 5 year program in Biomedical Engineering</p>
 </div>
-<div class="sec-sch">
-    <h4>September 2011 - August 2017 <br> Total Child Model School, Abuja, Nigeria - <em>- O level certificate</em> </h4>
+<div class="sch">
+    <h5 class="date">September 2011 - August 2017</h5> 
+    <h4> Total Child Model School, Abuja, Nigeria - <em> O level certificate</em> </h4>
     <p>I earned my O level certificate in discipline and humility</p>
 </div>
-<div class="pri-sch">
-    <h4>September 2005 - August 2011 <br> Pilot Science Nursery and Primary School, Abuja, Nigeria - <em> first school leaving
+<div class="sch">
+    <h5 class="date">September 2005 - August 2011 </h5> 
+    <h4> Pilot Science Nursery and Primary School, Abuja, Nigeria - <em> first school leaving
         certificate</em> </h4> 
 </div>
-<div>
-    <h4>November 2020 <br> Coursera - <em>certificate of participation</em> </h4>
+<div class="sch">
+    <h5 class="date">November 2020 </h5> 
+    <h4> Coursera - <em>certificate of participation</em> </h4>
     <p>Twitter Clone Back-end</p> 
 </div>
-<div>
-    <h4>January 2021 <br> Anakle - <em>certificate of participation</em> </h4>
+<div class="sch">
+    <h5 class="date">January 2021 </h5> 
+    <h4> Anakle - <em>certificate of participation</em> </h4>
     <p>Digital Marketing</p> 
 </div>
 
